test/domains/sungeun/assoc/exterior.1.good
exterior.chpl:4: In function 'my_exterior':
exterior.chpl:5: error: exterior not supported on associative domains
exterior.chpl:11: Function 'my_exterior' instantiated as: my_exterior(D: DefaultAssociativeDom(int(64),true), off: int(64))
